[Changes for 0.15 - 2007-12-18]

* Release by: Ævar Arnfjörð Bjarmason

* Make split // use RXf_NULL

[Changes for 0.14 - 2007-12-18]

* Release by: Ævar Arnfjörð Bjarmason

* libpcre is no longer bundled with this module. Making a release
  every time pcre was updated would have been painful (and I was
  already out of date).

* Killed M::I (again) in favor of ExtUtils::MakeMaker

[Changes for 0.13 - 2007-07-16]

* Release by: Ævar Arnfjörð Bjarmason

* libpcre/Makefile.PL: Don't make the libpcre.so dynamic library

* t/1-basic.t, PCRE.xs, LICENSE, Changes: s/\r\K\n//g;

[Changes for 0.12 - 2007-07-12]

* Release by: Ævar Arnfjörð Bjarmason

* Moved all the pcre \.[ch]$ files into libpcre, the build system in
  now in two parts.

  This makes things a bit cleaner and PCRE.h and pcre.h should not
  clash any more on case-insensitive file systems.

* t/split-null.t: New failing test for split //

[Changes for 0.11 - 2007-07-07]

* Release by: Ævar Arnfjörð Bjarmason

* PCRE.xs: Upgraded the split() optimization mechanism to match blead changes

* PCRE.xs: Support multiple named captures

* t/split.t: Fixet typo: foo|bar => x|y, test still fails though

* t/perl/regexp_nc_tie.t: Pulled test from blead

* t/perl/regexp.t: Enabled more tests (e.g. named capture)

* Removed some C++ files from pcre that snuck in the distro

* Makefile.PL: { use utf8; for the non-ascii author name }

[Changes for 0.10 - 2007-06-23]

* Release from new comaint: Ævar Arnfjörð Bjarmason

* Rewrote the whole thing to work on the latest blead which has
  undergone massive changes in the regex API. Threw out the old
  re::engine::PCRE and started fresh with re::engine::Plan9 as a base.

* Upgraded to PCRE 7.2, now supports named captures

* Made s/// work. Offsets weren't properly populated in exec in the
  old version

* Brought back Module::Install to make the tarball huger than ever
  before, sorry Yves!

* Lots of tests including some from perl core in t/

[Changes for 0.09 - 2006-12-06]
