@@ -4,6 +4,8 @@
 
 * Make split // use RXf_NULL
 
+* ABSTRACT_FROM and LICENSE in Makefile.PL
+
 [Changes for 0.14 - 2007-12-18]
 
 * Release by: Ævar Arnfjörð Bjarmason
